--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,26 @@
 .byebug_history
 
 .ruby-gemset
+
+
+# Client
+
+# dependencies
+/client/node_modules
+
+# testing
+/client/coverage
+
+# production
+/client/build
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
