--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,8 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "^5.0.5",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-saga": "^0.15.3"
   },
   "devDependencies": {
     "flow-bin": "^0.47.0",
