--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -4,10 +4,12 @@ simon:
   name: simon
   email: simon@jensen.dk
   role: child
+  account: jensen
   password_digest: <%= BCrypt::Password.create('password') %>
 
 peter:
   name: peter
   email: peter@hansen.dk
   role: child
+  account: hansen
   password_digest: <%= BCrypt::Password.create('password') %>
