--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -6,6 +6,12 @@ simon:
   account: jensen
   password_digest: <%= BCrypt::Password.create('password') %>
 
+simons_mom:
+  name: simons mom
+  email: simons_mom@jensen.dk
+  account: jensen
+  password_digest: <%= BCrypt::Password.create('password') %>
+
 peter:
   name: peter
   email: peter@hansen.dk
