--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -14,8 +14,8 @@ simon_eats_breakfast:
   starts_at: 2017-06-12 07:05:00
   ends_at: 2017-06-12 07:25:00
 
-morten_gets_up:
-  plan: mortens_plan
+peter_gets_up:
+  plan: peters_plan
   title: Get up
   color: red
   starts_at: 2017-06-12 07:30:00
