--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "react-router": "^4.1.1",
     "react-router-dom": "^4.1.1",
     "redux": "^3.6.0",
+    "redux-persist": "^4.8.3",
     "redux-saga": "^0.15.3",
     "reselect": "^3.0.1"
   },
