--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,8 @@
     "redux": "^3.6.0",
     "redux-persist": "^4.8.3",
     "redux-saga": "^0.15.3",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "semantic-ui-react": "^0.71.4"
   },
   "devDependencies": {
     "flow-bin": "^0.47.0",
