--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,7 @@
   },
   "devDependencies": {
     "flow-bin": "^0.47.0",
-    "react-scripts": "1.0.6"
+    "react-scripts": "^1.0.11"
   },
   "scripts": {
     "start": "react-scripts start",
